# contacts-app

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  compose.yaml  contacts.db  contacts.db-shm  contacts.db-wal  package-lock.json  package.json  pnpm-lock.yaml  request.http  tailwind.config.js
.sqlx/: query-0277c557267414c6ca3884011f5d602d217f6d5724fbbfbed487eb824e8ba6a5.json  query-0a46f7bb6fe3e82c8e9fb0566633d5771a791ce8bccea74aa50c7fe2191a9cd5.json  query-10d2d75fb73fbdc6082d8a5efe1ffa5d95112b44b34bb63025744a77900cf2b6.json  query-16379befb907fe04825d5252bae95e34c6ca10ac60ae0c325649b625b01a9b87.json  query-239df4d0c791a3697235c615dbcf479013bc21b99f841feb9a8c452ab4da41ea.json  query-26aaa0054b9aa9804214008956c6f1bdf9c0bbc27f96b892ab54c387767fb09d.json  query-34313334bb17034dbb7784e9110305eed24728177c3c6c065050d39d7eefa031.json  query-3fe3302ee0b6f46445c3617aaf34229a8cd816837e31908222ff373125729fb6.json  query-50e2ba825ca9b0eb045ef3d633d99b8c3c396a4c069e88b9ccc036e2e804891b.json  query-615ac7a20060aec869d8ed7b1fca155e9d0112177fc767606a4e5ad6a7fb4d8c.json  query-6ee72db45d55f42aaba9d18f51270a46241947c94644f99faaf27033d5b5cf21.json  query-85992dc3c123417eda2641696f948d1eae6a9cd42d4c4e60b855208ce2b0ff07.json  query-8b9fa0a704dbaa8ad1258c518c3d0fab14f84f11fc56d4dad7bb5f8356a06d35.json  query-91e85eefa07d7f73155c50780ecb9d12f7bb11dfbff097c5943dac7bd10f9e61.json  query-b1b6455f98b255a4e71783f80a7474c5f6aed65c93814215340f4f76d981802e.json  query-b242ebb2111d652df41d7549b0326b4a8e7203b0ed5103031472b66360050608.json  query-b5c86ee3af949c457bcb5b30bae4c834fc8cf75c99555b59ca42cc8f6323ea8e.json  query-c43697983abc7bae2927fd70396d06c8ac6f8f6ef9616ac289c73e41c52a1a4b.json  query-cdba2b8c57180a2bf66c485b523ca18b6965d79e4a97b75e1db69987d8b11016.json  (+9 more)
(+50 files in other folders)
