[package]
name = "axum-3-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.1"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
tower-http = { version = "0.5.0", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.31"
thiserror = "1.0.56"
axum-extra = { version = "0.9.2", features = ["form"] }
rand = "0.8.5"
tokio-util = { version = "0.7.10", features = ["io"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0.80"
axum-macros = "0.4.1"
dotenv = "0.15.0"
axum-messages = "0.6.1"
tower-sessions = { version = "0.12.2", default-features = false, features = [
    "signed",
] }
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
time = "0.3.36"
axum-login = "0.15.1"
password-auth = "1.0.0"
